--- a/app/src/main/res/layout/activity_journey_list.xml
+++ b/app/src/main/res/layout/activity_journey_list.xml
@@ -1,17 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clipToPadding="false"
+    android:padding="16dp"
     tools:context=".feature_journeylist.JourneyListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/journey_list"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_journey_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:clickable="true"
+        android:focusable="true"
+        android:onClick="startAddJourneyActivity"
+        app:elevation="16dp"
+        app:layout_anchor="@+id/journey_list"
+        app:layout_anchorGravity="right|bottom"
+        app:srcCompat="@drawable/ic_baseline_add_24px" />
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
