Add empty test file for AddJourneyActivity

--- a/app/src/main/res/layout/activity_journey_list.xml
+++ b/app/src/main/res/layout/activity_journey_list.xml
@@ -23,9 +23,9 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/colorPrimaryDark"
         android:clickable="true"
-        android:focusable="true"
         android:onClick="startAddJourneyActivity"
         app:elevation="16dp"
+        app:borderWidth="0dp"
         app:layout_anchor="@+id/journey_list"
         app:layout_anchorGravity="right|bottom"
         app:srcCompat="@drawable/ic_baseline_add_24px" />
