--- a/app/src/main/res/layout/activity_journey_list.xml
+++ b/app/src/main/res/layout/activity_journey_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
-    android:padding="16dp"
+    android:padding="8dp"
     tools:context=".feature_journeylist.JourneyListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -24,11 +24,12 @@
         android:backgroundTint="@color/colorPrimaryDark"
         android:clickable="true"
         android:onClick="startAddJourneyActivity"
-        app:elevation="16dp"
+        app:elevation="4dp"
         app:borderWidth="0dp"
         app:layout_anchor="@+id/journey_list"
         app:layout_anchorGravity="right|bottom"
-        app:srcCompat="@drawable/ic_baseline_add_24px" />
+        app:srcCompat="@drawable/ic_baseline_add_24px"
+        android:focusable="true" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
