Added focusable attribute to addJourney FAB

--- a/app/src/main/res/layout/activity_journey_list.xml
+++ b/app/src/main/res/layout/activity_journey_list.xml
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/colorPrimaryDark"
         android:clickable="true"
+        android:focusable="true"
         android:onClick="startAddJourneyActivity"
         app:elevation="16dp"
         app:borderWidth="0dp"
