--- a/app/src/main/res/layout/activity_add_journey.xml
+++ b/app/src/main/res/layout/activity_add_journey.xml
@@ -4,6 +4,95 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     tools:context=".feature_addjourney.AddJourneyActivity">
+
+    <TextView
+        android:id="@+id/departure_addr_label"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/addjourney_from_label"
+        android:textSize="@dimen/addjourney_label_size"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/departure_addr_txt"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="0dp"
+        android:ems="10"
+        android:hint="@string/addjourney_addr_hints"
+        android:inputType="textPersonName"
+        app:layout_constraintBaseline_toBaselineOf="@+id/departure_addr_label"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/departure_addr_label"
+        android:autofillHints="postalAddress" />
+
+
+    <TextView
+        android:id="@+id/destination_addr_label"
+        android:layout_width="wrap_content"
+        android:layout_height="27dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="32dp"
+        android:text="@string/addjourney_to_label"
+        android:textSize="@dimen/addjourney_label_size"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/departure_addr_label" />
+
+    <EditText
+        android:id="@+id/destination_addr_txt"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="0dp"
+        android:ems="10"
+        android:hint="@string/addjourney_addr_hints"
+        android:inputType="textPersonName"
+        app:layout_constraintBaseline_toBaselineOf="@+id/destination_addr_label"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/departure_addr_label"
+        android:autofillHints="postalAddress"/>
+
+
+    <TextView
+        android:id="@+id/duration_label"
+        android:layout_width="wrap_content"
+        android:layout_height="27dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="32dp"
+        android:text="@string/addjourney_duration_label"
+        android:textSize="@dimen/addjourney_label_size"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/destination_addr_label"
+        android:labelFor="@id/duration_txt" />
+
+    <EditText
+        android:id="@+id/duration_txt"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="0dp"
+        android:ems="10"
+        android:inputType="numberDecimal"
+        app:layout_constraintBaseline_toBaselineOf="@+id/duration_label"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/duration_label" />
+
+
+    <TextView
+        android:id="@+id/start_time_label"
+        android:layout_width="wrap_content"
+        android:layout_height="27dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="32dp"
+        android:text="@string/addjourney_start_time_label"
+        android:textSize="@dimen/addjourney_label_size"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/duration_label" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
