--- a/app/src/main/res/layout/activity_add_journey.xml
+++ b/app/src/main/res/layout/activity_add_journey.xml
@@ -14,20 +14,19 @@
         android:layout_height="30dp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="8dp"
-        android:text="@string/addjourney_from_label"
+        android:text="@string/add_journey_from_label"
         android:textSize="@dimen/addjourney_label_size"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/addjourney_departure_addr_txt"
+        android:id="@+id/add_journey_departure_addr_txt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="0dp"
         android:autofillHints="postalAddress"
         android:ems="10"
-        android:hint="@string/addjourney_addr_hints"
+        android:hint="@string/add_journey_addr_hints"
         android:inputType="textPersonName"
         app:layout_constraintBaseline_toBaselineOf="@+id/departure_addr_label"
         app:layout_constraintEnd_toEndOf="parent"
@@ -105,14 +104,14 @@
 
 
     <Button
-        android:id="@+id/addjourney_next_btn"
+        android:id="@+id/add_journey_submit_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/addjourney_next_btn_txt"
-        android:onClick="openMapRoutePickerActivity"
+        android:onClick="onSubmit"
+        android:text="@string/add_journey_next_btn_txt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
